option(
	'gtk-doc',
	type: 'boolean',
	value: false,
	description: 'Install library reference, requires gtk-doc'
)
option(
	'glade',
	type: 'boolean',
	value: false,
	description: 'Install glade catalog, requires gladeui-2.0'
)
option(
	'gir',
	type: 'boolean',
	value: false,
	description: 'Install GObject Introspection data, requires gobject-introspection'
)
option(
	'pocketsphinx',
	type: 'boolean',
	value: false,
	description: 'Compile with ASR, requires CMU Sphinx'
)
option(
	'deepspeech',
	type: 'boolean',
	value: false,
	description: 'Compile with ASR, requires Mozilla Deepspeech'
)