option(
  'gtk-doc',
  type: 'boolean',
  value: false,
  description: 'Install library reference, requires gtk-doc'
)
option(
  'gir',
  type: 'boolean',
  value: false,
  description: 'Install GObject Introspection data, requires gobject-introspection'
)
option(
  'pocketsphinx-legacy',
  type: 'boolean',
  value: false,
  description: 'Compile with ASR, requires PocketSphinx 5prealpha'
)
option(
  'pocketsphinx',
  type: 'boolean',
  value: false,
  description: 'Compile with ASR, requires PocketSphinx 5'
)