@YELP_HELP_RULES@

HELP_ID = parlatype

HELP_MEDIA = 					\
	figures/parlatype-icon.png		\
	figures/parlatype-prefs-controls.png	\
	figures/parlatype-prefs-waveform.png	\
	figures/parlatype-prefs-window.png	\
	figures/parlatype-main-window.png

HELP_FILES = 					\
	index.page				\
	drag-and-drop.page			\
	first-steps.page			\
	keyboard-shortcuts.page			\
	legal.xml				\
	media-keys.page				\
	preferences.page			\
	selections.page				\
	timestamps.page

if LO
HELP_MEDIA +=					\
	figures/lo-customize.png		\
	figures/lo-menu.png

HELP_FILES +=					\
	libreoffice-helpers.page
endif

HELP_LINGUAS = de en_GB he it
