@YELP_HELP_RULES@

HELP_ID = com.github.gkarsay.parlatype

HELP_MEDIA = 					\
	figures/parlatype-icon.png		\
	figures/parlatype-prefs-controls.png	\
	figures/parlatype-prefs-waveform.png	\
	figures/parlatype-prefs-window.png	\
	figures/parlatype-main-window.png

HELP_FILES = 					\
	index.page				\
	drag-and-drop.page			\
	first-steps.page			\
	keyboard-shortcuts.page			\
	legal.xml				\
	media-keys.page				\
	preferences.page			\
	selections.page				\
	timestamps.page

if LIBREOFFICE
HELP_MEDIA +=					\
	figures/lo-customize.png		\
	figures/lo-menu.png

HELP_FILES +=					\
	libreoffice-helpers.page
endif

HELP_LINGUAS = de en_GB es fi id it lt ku pl pt sk

EXTRA_DIST = \
	LINGUAS		\
	meson.build
